--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: tee-udon
 
 # Build settings
-theme: Plainwhite
+theme: minima
 plugins:
   - jekyll-feed
 
